--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: dart_http_sse
+name: flutter_http_sse
 description: "Flutter HTTP Server-Sent Events (SSE) client library for receive real-time updates from the server"
 version: 1.0.2
-homepage: https://github.com/ElshiatyTube/dart_http_sse
-repository: https://github.com/ElshiatyTube/dart_http_sse
+homepage: https://github.com/ElshiatyTube/flutter_http_sse
+repository: https://github.com/ElshiatyTube/flutter_http_sse
 
 environment:
   sdk: '>=2.17.0 <4.0.0'
