--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: flutter_http_sse
+name: dart_http_sse
 description: "Flutter HTTP Server-Sent Events (SSE) client library for receive real-time updates from the server"
-version: 1.0.2
+version: 1.0.3
 homepage: https://github.com/ElshiatyTube/flutter_http_sse
 repository: https://github.com/ElshiatyTube/flutter_http_sse
 
